更新角色扮演功能，新增西游记和哈利波特模拟器的详细设定与场景示例，调整提示词顺序并优化描述，提升用户体验和代码可读性。

--- a/系统指令切换使用指南.md
+++ b/系统指令切换使用指南.md
@@ -27,7 +27,25 @@
 - **适用场景**：日常咨询、生活建议、闲聊
 - **功能**：支持多轮对话、提供实用建议、友好交流
 
-### 2. **technical** - 技术专家助手
+### 2. **StoneMonkey** - 西游记角色扮演模拟器 🐒
+```
+/sys:StoneMonkey
+```
+- **特点**：沉浸式角色扮演、古典神话风格
+- **适用场景**：西游记剧情体验、角色扮演游戏
+- **功能**：西游记角色扮演、古典神话风格、互动式剧情、原著情节再现
+- **角色**：用户扮演孙悟空，AI扮演所有其他角色和旁白
+
+### 3. **HarryPotter** - 哈利波特魔法世界模拟器 ⚡
+```
+/sys:HarryPotter
+```
+- **特点**：魔法世界沉浸体验、英伦奇幻风格
+- **适用场景**：哈利波特剧情体验、魔法冒险
+- **功能**：哈利波特角色扮演、魔法世界体验、霍格沃茨冒险、互动式剧情
+- **角色**：用户扮演哈利波特，AI扮演所有其他角色和旁白
+
+### 4. **technical** - 技术专家助手
 ```
 /sys:technical
 ```
@@ -35,7 +53,7 @@
 - **适用场景**：编程问题、技术方案、代码审查
 - **功能**：代码分析与优化、技术方案建议、最佳实践指导、调试协助
 
-### 3. **customerService** - 客服助手
+### 5. **customerService** - 客服助手
 ```
 /sys:customerService
 ```
@@ -43,7 +61,7 @@
 - **适用场景**：客户服务、问题解决、投诉处理
 - **功能**：客户问题解决、服务质量保证、耐心细致服务
 
-### 4. **education** - 教育助手
+### 6. **education** - 教育助手
 ```
 /sys:education
 ```
@@ -51,7 +69,7 @@
 - **适用场景**：学习辅导、知识解释、教学支持
 - **功能**：知识点解释、学习方法指导、练习题设计、学习进度跟踪
 
-### 5. **english** - 英文助手
+### 7. **english** - 英文助手
 ```
 /sys:english
 ```
@@ -59,7 +77,7 @@
 - **适用场景**：英语练习、语法纠错、写作改进
 - **功能**：English conversation practice、Grammar assistance、Writing improvement
 
-### 6. **creative** - 创意助手
+### 8. **creative** - 创意助手
 ```
 /sys:creative
 ```
@@ -67,7 +85,7 @@
 - **适用场景**：创意写作、故事创作、艺术创作
 - **功能**：创意写作、故事创作、头脑风暴、艺术灵感
 
-### 7. **analyst** - 分析助手
+### 9. **analyst** - 分析助手
 ```
 /sys:analyst
 ```
@@ -77,7 +95,50 @@
 
 ## 💡 使用示例
 
-### 场景1：从日常对话切换到技术支持
+### 场景1：切换到西游记角色扮演模式
+
+**用户输入：**
+```
+/sys:StoneMonkey
+```
+
+**系统响应：**
+```
+✅ **系统提示词已切换**
+
+**当前模式：** `StoneMonkey`
+**描述：** 西游记角色扮演模拟器，体验孙悟空的传奇故事
+
+历史对话记录已清空，我现在以新的角色为您服务！
+
+**当前身份：** 《西游记》模拟器的编剧和旁白
+
+您可以随时使用 `/sys:help` 查看可用的模式，或使用 `/sys:其他模式名` 切换到其他模式。
+```
+
+**接下来的对话：**
+```
+AI：**旁白**: 轰隆！仙石迸裂，金光四射。只见一道灵通，目运两道金光，射冲斗府，惊动了高天上圣大慈仁者玉皇大天尊玄穹高上帝。你，自天地孕育的石猴，于今日诞生于花果山水帘洞。此刻，你正站在山巅，感受着自由的清风，群猴在你脚下欢呼雀跃，尊你为"美猴王"。孩儿们正嚷着要你去寻那长生不老之术呢。
+
+**美猴王，你意下如何？**
+
+用户：我要先熟悉一下花果山的环境，看看有什么特别的地方。
+
+AI：**旁白**: 你纵身一跃，轻盈如燕地在山峰间穿梭。花果山果然名不虚传，满山奇花异果，瑞气千条，霞光万道。你看到：
+
+- **水帘洞**: 瀑布如银河倒挂，洞内宽敞明亮，石桌石椅天然而成
+- **蟠桃园**: 山腰处桃花盛开，果实累累，香气扑鼻
+- **仙草遍地**: 灵芝、何首乌、千年人参随处可见
+- **群猴聚集地**: 数千猴子猴孙在此嬉戏，见你归来纷纷跪拜
+
+**众猴**: "大王！大王回来了！我们正愁找不到长生之法呢！"
+
+**老猴**: "大王神通广大，定能为我等寻得仙方！"
+
+你感到一股王者之气在胸中涌动，这花果山的一草一木都在你的掌控之中。
+```
+
+### 场景2：从日常对话切换到技术支持
 
 **用户输入：**
 ```
@@ -122,7 +183,7 @@ const expensiveValue = useMemo(() => {
 ...
 ```
 
-### 场景2：查看帮助信息
+### 场景3：查看帮助信息
 
 **用户输入：**
 ```
@@ -135,6 +196,8 @@ const expensiveValue = useMemo(() => {
 
 **可用的预设提示词：**
 - `general`: 通用友好助手，适合日常对话和生活咨询
+- `StoneMonkey`: 西游记角色扮演模拟器，体验孙悟空的传奇故事
+- `HarryPotter`: 哈利波特魔法世界模拟器，体验霍格沃茨的奇幻冒险
 - `customerService`: 专业客服助手，专注客户服务和问题解决
 - `technical`: 技术专家助手，擅长编程、开发和技术支持
 - `education`: 教育助手，善于解释概念和提供学习指导
@@ -146,6 +209,8 @@ const expensiveValue = useMemo(() => {
 `/sys:预设名称` - 切换到指定的系统提示词
 
 **示例：**
+- `/sys:StoneMonkey` - 切换到西游记角色扮演模式
+- `/sys:HarryPotter` - 切换到哈利波特魔法世界模式
 - `/sys:technical` - 切换到技术助手模式
 - `/sys:customerService` - 切换到客服助手模式
 - `/sys:education` - 切换到教育助手模式
@@ -153,7 +218,7 @@ const expensiveValue = useMemo(() => {
 切换提示词时会自动清空历史对话记录。
 ```
 
-### 场景3：错误的预设名称
+### 场景4：错误的预设名称
 
 **用户输入：**
 ```
@@ -164,7 +229,7 @@ const expensiveValue = useMemo(() => {
 ```
 ❌ **未找到提示词预设：`unknown`**
 
-可用的预设包括：general, customerService, technical, education, english, creative, analyst
+可用的预设包括：general, StoneMonkey, HarryPotter, customerService, technical, education, english, creative, analyst
 
 使用 `/sys:help` 查看详细帮助。
 ```
@@ -199,7 +264,7 @@ if (lastMessage?.role === 'user' && userInput.startsWith('/sys:')) {
 
 ## 🎨 自定义扩展
 
-### 添加新预设
+### 添加普通预设
 
 可以在 `src/prompts.ts` 中添加新的预设配置：
 
@@ -207,12 +272,42 @@ if (lastMessage?.role === 'user' && userInput.startsWith('/sys:')) {
 export const PRESET_CONFIGS = {
   // 现有预设...
   
-  // 新增预设
+  // 新增普通预设
   medical: {
     language: 'zh' as const,
     personality: 'professional' as const,
     features: ['医学知识背景', '健康建议', '但不替代专业诊断']
   }
+};
+```
+
+### 添加角色扮演预设
+
+对于复杂的角色扮演模式，需要：
+
+1. **在 `PRESET_CONFIGS` 中添加配置**：
+```typescript
+// 三国演义模拟器
+ThreeKingdoms: {
+  language: 'zh' as const,
+  personality: 'creative' as const,
+  features: ['三国演义角色扮演', '古代战争策略', '历史情节再现']
+}
+```
+
+2. **在 `ROLEPLAY_PROMPTS` 中添加详细提示词**：
+```typescript
+const ROLEPLAY_PROMPTS = {
+  // 现有角色扮演...
+  
+  ThreeKingdoms: `**【角色设定】**
+*   **用户（玩家）**: 可选择扮演刘备、曹操、孙权等历史人物
+*   **AI（编剧）**: 扮演其他历史人物和旁白...
+
+**【模拟器规则】**
+1. 历史背景准确，情节生动
+2. 支持战略决策和外交选择
+...`
 };
 ```
 
@@ -224,7 +319,8 @@ export const PRESET_CONFIGS = {
 private getPresetDescription(presetName: string): string {
   const descriptions: Record<string, string> = {
     // 现有描述...
-    'medical': '医疗助手，提供健康信息和建议'
+    'medical': '医疗助手，提供健康信息和建议',
+    'ThreeKingdoms': '三国演义角色扮演模拟器，体验乱世英雄传奇'
   };
   
   return descriptions[presetName] || '自定义助手模式';
